--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -37,10 +37,11 @@
 // User
 @import "user";
 
-.heading-permalink{
+.heading-permalink {
     color: transparent;
     margin-left: -2rem;
-    &:hover{
+
+    &:hover {
         color: transparent;
 
 
@@ -48,18 +49,19 @@
 
 
 
-&::before {
-    color: rgba(82,95,127,0);
-    content: "#";
+    &::before {
+        color: rgba(82, 95, 127, 0);
+        content: "#";
 
 
 
-}
-&:hover:before{
-    color: $primary;
+    }
+
+    &:hover:before {
+        color: $primary;
 
 
 
-}
+    }
 
 }
